--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,5 @@
 REACT_APP_CLIENT_ID='9db950db-31d8-4966-9f35-e8222d2fdcf6'
-REACT_APP_CLIENT_SECRET='3fcedd8c-06cf-48a6-812e-d7c63154ec729c4f1734-4a67-4d17-a9a9-b3a7694f9063'
-REACT_APP_KEYCLOAK_CLIENT_SECRET='WGahOcaJcbQ2srhBsNH56NhhDxH5M51f'
+REACT_APP_CLIENT_SECRET='c1422e87-a545-4178-bcaa-5b7baf59f72b11d4dd3c-4d5e-4358-9aff-c654a7924335'
+REACT_APP_KEYCLOAK_CLIENT_SECRET='b26ca0f9-1137-4bee-b453-ee51eefbe7ba'
+REACT_APP_KEYCLOAK_CLIENT_ID='beacon'
+REACT_APP_KEYCLOAK_CLIENT_REALM='Beacon'
