--- a/frontend/src/config.json
+++ b/frontend/src/config.json
@@ -1,5 +1,5 @@
 {
-  "API_URL": "http://localhost:5050/api",
-  "REDIRECT_URL": "http://localhost:3000/",
-  "KEYCLOAK_URL": "http://localhost:8080"
+  "API_URL": "https://beacon-network-backend-test.ega-archive.org/beacon-network/v2.0.0",
+  "REDIRECT_URL": "https://beacon-network-test.ega-archive.org/",
+  "KEYCLOAK_URL": "https://beacon-network-demo2.ega-archive.org"
 }
